# PhonTracer

./: .gitignore  AGENTS.md  CHANGELOG.md  PAPER_USAGE_GUIDE.md  PRIVACY.md  PhonTracer_学术可用性论证.md  README.md  README_REVISION_GUIDE.md  SECURITY.md  SOFTWARE_COMPLETION_CHECKLIST.md  SUPPORT.md  ToneExtractor.spec  ToneExtractor_Suite.spec  UI_UX_Redesign_Report.md  audio_toolkit.py  cli.py  fix_indent_app.py  fix_indent_app_2.py  fix_indent_app_3.py  installer.iss  main.py  patch_app_py.py  patch_app_py_clean.py  patch_app_py_fix.py  patch_app_py_sed.py  patch_audio_core.py  patch_data_utils.py  patch_spectrogram_panel.py  requirements.txt  test_script.py  test_syntax.py  tone_extractor.py  tone_extractor_backup.py  toolkit.py  user_manual.html
PhonRec/frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
PhonRec/frontend/src-tauri/capabilities/: default.json
PhonRec/frontend/src-tauri/icons/: icon.icns
PhonRec/frontend/src-tauri/permissions/: app-commands.toml
PhonRec/frontend/src-tauri/src/: main.rs
assets/: Setup.icns  icon.icns  tool_icon.icns  toolkit.icns
docs/: ARCHITECTURE.md  PHONREC_OPERATION_GUIDE.md  PHONREC_OPERATION_GUIDE_SOURCE.md  PROJECT_FORMAT_V1.md  RELEASE_CHECKLIST.md  RELEASE_TEMPLATE.md  THREAT_MODEL.md  project.schema.json
example/: wordlist_1000.txt  wordlist_test.txt
modules/: about_dialog.py  acoustic_analysis_service.py  acoustic_exporter.py  anomaly_detection.py  app.py  audio_core.py  data_utils.py  f0_detection_dialog.py  formant_detection_dialog.py  formant_optimizer.py  project_adaptor.py  project_import_dialog.py  (+21 more)
(+111 files in other folders)
