[package]
name = "phonrec"
version = "1.3.0"
description = "PhonTracer 配套多发音人录音工具"
authors = ["KasumiKitsune"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["test"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
cpal = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
